# rust-hero-api

./: Cargo.toml  README.md
migrations/2020-04-18-125753_heroes/: up.sql
src/: db.rs  hero.rs  main.rs
