[package]
name = "hero-api"
version = "0.1.0"
authors = ["Greg Madden <greg.madden@skybettingandgaming.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde_json = "1.0.51"
serde = "1.0.106"
serde_derive = "1.0.106"
diesel = { version = "1.4.0", features = ["mysql"] }
r2d2 = "*"
r2d2-diesel = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]